--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
       <a class="nav-item nav-link link-body-emphasis" style="font-family: 'Taipei Sans TC-B', sans-serif;" href="https://www.tahrd.ntnu.edu.tw/">系所資訊</a>
       <a class="nav-item nav-link link-body-emphasis" style="font-family: 'Taipei Sans TC-B', sans-serif;" href="https://github.com/mason45ok/DB">資料庫系統</a>
       <a class="nav-item nav-link link-body-emphasis" style="font-family: 'Taipei Sans TC-B', sans-serif;" href="https://medium.com/@mason45ok">我的medium</a>
-      <!-- <a class="nav-item nav-link link-body-emphasis" href="#">Business</a>
-      <a class="nav-item nav-link link-body-emphasis" href="#">Politics</a>
+      <a class="nav-item nav-link link-body-emphasis" style="font-family: 'Taipei Sans TC-B', sans-serif;" href="DICE.html">HW3 骰子模擬器</a>
+      <!-- <a class="nav-item nav-link link-body-emphasis" href="#">Politics</a>
       <a class="nav-item nav-link link-body-emphasis" href="#">Opinion</a>
       <a class="nav-item nav-link link-body-emphasis" href="#">Science</a>
       <a class="nav-item nav-link link-body-emphasis" href="#">Health</a>
